app/assets/sass/application.scss
/* ... */
  .chevron-card__description {
	margin: 0 30px 0 0;
  }
  
  .chevron-card__link::after {
	bottom: 0;
	content: "";
	display: block;
	left: 0;
	position: absolute;
	right: 0;
	top: 0;
  }
  
  .chevron-card__link::before {
	border-right: 3px solid #1d70b8;
	border-top: 3px solid #1d70b8;
	content: "";
	display: block;
	height: 7px;
	position: absolute;
	right: 5px;
	top: 50%;
	margin-top: 5px;
	-webkit-transform: translateY(0) rotate(45deg) scale(1);
	-ms-transform: translateY(0) rotate(45deg) scale(1);
	transform: translateY(0) rotate(45deg) scale(1);
	width: 7px;
  }
  
  .chevron-card__link:hover::before {
	border-color: #003078;
  }
  
  .chevron-card__link:focus::before {
	border-color: #0b0c0c;
  }
  
  @media (min-width: 40.0625em) {
	.govuk-heading-s_no-margin {
	  margin-bottom: 0px;
	}
  }
  @media (min-width: 40.0625em) {
	.govuk-tag_custom {
	  font-size: 1rem;
	  line-height: 1.3157894737;
	}
  }
  .link-style {
	color: #1d70b8;
	text-decoration: underline;
  }
  
  .card-page a, .p-link-style {
	text-decoration: none !important;
  }
  
  .govuk-link:hover, .app-task-list__task-name > a:hover {
	color: #003078;
	text-decoration-thickness: max(3px, 0.1875rem, 0.12em);
  }
  
  .govuk-link-hover {
	color: #003078;
	text-decoration-thickness: max(3px, 0.1875rem, 0.12em);
  }
  
  .app-task-list__items_custom {
	padding-left: 0;
  }
  
  .govuk-button-custom {
	width: 100%;
  }
  
  .blue-border {
	border: 3px solid #1d70b8;
	margin-bottom: 30px;
  }
  
  .blue-border-thin {
	border: 1px solid #1d70b8;
	margin-bottom: 30px;
  }
  
  .grey-border {
	border: 3px solid #b1b4b6;
	margin-bottom: 30px;
  }
  
  .grey-border-thin {
	border: 1px solid #b1b4b6;
	margin-bottom: 30px;
  }


// Design history styling
img.design-history {
  width: 100%;
  border: solid 1px grey;
  margin: 30px 0px;
}


// print button
.gem-c-print-link__link, .gem-c-print-link__button {
  background: url(/public/images/icon-print.png) no-repeat 10px 50%;
  background-size: 16px 18px;
  padding: 10px 10px 10px 36px;
  text-decoration: none;
}

// grasslands-v2: simulated compatibility API loading state on select-actions
.actions-compatibility-status-sentinel {
  height: 1px;
  margin: 0;
  padding: 0;
  pointer-events: none;
}

.actions-compatibility-status {
  margin-top: 15px;
  margin-bottom: 20px;
}

// Stay visible while the user scrolls the long actions list
.actions-compatibility-status:not([hidden]) {
  position: sticky;
  top: 0;
  z-index: 5;
  margin-top: 0;
  margin-bottom: 15px;
  padding-top: 15px;
  padding-bottom: 15px;
  background-color: #ffffff;
  border-bottom: 1px solid transparent;
}

// Border only once the message is stuck to the top of the viewport
.actions-compatibility-status--stuck:not([hidden]) {
  border-bottom-color: #f3f2f1;
}

.actions-compatibility-status__inner {
  display: flex;
  align-items: flex-start;
  gap: 12px;
}

.actions-compatibility-status__spinner {
  display: inline-block;
  width: 24px;
  height: 24px;
  margin-top: 2px;
  border: 3px solid #b1b4b6;
  border-top-color: #1d70b8;
  border-radius: 50%;
  animation: actions-compatibility-spin 0.8s linear infinite;
  flex-shrink: 0;
}

@keyframes actions-compatibility-spin {
  to {
    transform: rotate(360deg);
  }
}

.govuk-checkboxes__item.actions-api-loading-disabled {
  opacity: 0.5;
}

